--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/node": "^16.18.83",
     "@types/react": "^18.2.60",
     "@types/react-dom": "^18.2.19",
+    "date-fns": "^3.3.1",
+    "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
